--- a/src/CallSharp/Properties/Resources.resx
+++ b/src/CallSharp/Properties/Resources.resx
@@ -69,8 +69,8 @@
                 <xsd:element name="value" type="xsd:string" minOccurs="0" />
               </xsd:sequence>
               <xsd:attribute name="name" type="xsd:string" />
-              <xsd:attribute name="type" type="xsd:string" />
-              <xsd:attribute name="mimetype" type="xsd:string" />
+              <xsd:attribute name="type" outputType="xsd:string" />
+              <xsd:attribute name="mimetype" outputType="xsd:string" />
             </xsd:complexType>
           </xsd:element>
           <xsd:element name="assembly">
@@ -86,8 +86,8 @@
                 <xsd:element name="comment" type="xsd:string" minOccurs="0" msdata:Ordinal="2" />
               </xsd:sequence>
               <xsd:attribute name="name" type="xsd:string" msdata:Ordinal="1" />
-              <xsd:attribute name="type" type="xsd:string" msdata:Ordinal="3" />
-              <xsd:attribute name="mimetype" type="xsd:string" msdata:Ordinal="4" />
+              <xsd:attribute name="type" outputType="xsd:string" msdata:Ordinal="3" />
+              <xsd:attribute name="mimetype" outputType="xsd:string" msdata:Ordinal="4" />
             </xsd:complexType>
           </xsd:element>
           <xsd:element name="resheader">
